--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/node": "^22.5.4",
     "@types/swagger-jsdoc": "^6.0.4",
     "nodemon": "^3.1.4",
-    "prisma": "^5.19.1",
+    "prisma": "^5.20.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
@@ -34,6 +34,8 @@
     "express-rate-limit": "^7.4.0",
     "express-validator": "^7.2.0",
     "helmet": "^7.1.0",
+    "hotel": "file:",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "swagger-jsdoc": "^6.2.8",
